--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,20 @@
-version: '3.8'
 services:
   db:
     image: postgres:15-alpine
     environment:
-      POSTGRES_DB: coursesdb
-      POSTGRES_USER: user
+      POSTGRES_DB:       coursesdb
+      POSTGRES_USER:     user
       POSTGRES_PASSWORD: password
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
   backend:
     build: ./courses-api-backend
+    # mount your local code, so `runserver` will reload on file changes
+    volumes:
+      - ./courses-api-backend:/app
+    working_dir: /app
+    command: python manage.py runserver 0.0.0.0:8008
     environment:
       POSTGRES_DB:       coursesdb
       POSTGRES_USER:     user
